opam-version: "2.0"
maintainer: "foobar"
authors: ["foobar"]
homepage: "https://github.com/proof-ninja/ocaml-blake3"
bug-reports: "https://github.com/proof-ninja/ocaml-blake3/issues"
dev-repo: "git+https://github.com/proof-ninja/ocaml-blake3.git"
license: "foobar"

depends: [
    "ocaml" {>= "4.09.1"}
    "dune"
    "conf-rust" {build}
]

build: [
    ["dune" "build" "-p" name]
    ["dune" "runtest" "-p" name] {with-test}
]

synopsis: """
Blake3 cryptography
"""
