opam-version: "2.0"
name: "blake3"
version: "0.3"
maintainer: "Jun FURUSE <jun.furuse@dailambda.jp>"
authors: ["Yoshihiro Imai <y.imai@proof-ninja.co.jp>" "Jun Furuse <jun.furuse@dailambda.jp>"]
homepage: "https://github.com/camlspotter/ocaml-blake3"
bug-reports: "https://github.com/camlspotter/ocaml-blake3/issues"
dev-repo: "git+https://github.com/camlspotter/ocaml-blake3.git"
license: "MIT"

depends: [
  "ocaml" {>= "4.09.1" & < "5.0"}
  "dune" {>= "2.7"}
  "conf-rust" {build}
  "hacl-star" {>= "0.4.5"}
]
available: arch != "s390x"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

synopsis: "Blake3 cryptography"
